--- a/index.html
+++ b/index.html
@@ -4,10 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro exercicio</title>
+    <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <h1>Olá, mundo!</h1>
     <p>Esse é o meu primeiro documento HTML e eu estou muito feliz</p>
     <hr><p>Este é um momento unico</p>
+    <hr><p>&lt;p&gt; é um exemplo de como colocar uma tag</p>
+    <p>adiconando símbolos:
+        &reg;
+        &copy;
+        &trade;
+        &euro;
+        &pound;
+        &Cayleys;
+        &cent;
+        &Delta;
+        &uparrow;
+
+        <h2>teste com imagens</h2>
+        <img src="imagens/camisacutinhopng.png" alt="coutinho em png"><p>essa é uma imagem png</p>
+        <img src="imagens/coutinhojpeg.jpg" alt="coutinho em jpeg"><p>imagem jpeg</p>
+        <img src="https://media.gettyimages.com/id/2152653514/pt/foto/rio-de-janeiro-brazil-pablo-vegetti-of-vasco-da-gama-celebrates-after-scoring-the-teams-second.jpg?s=612x612&w=gi&k=20&c=O_CSZcb0saomvrnLx3jEyKF8heXkV9VeqAL-mA_Ti5U=" alt="imagem do vegetti"><p>imagem de url</p><br>
+        <h1>Entendendo Portugal</h1>
+        <h2> 1. Introduão</h2>
+        <h3>1.1 Justificativa da Temática</h3>
+        <p>esse <b>termo</b> está em negrito com a tag b</p>
+        <h3>1.2 Caráter excecional do caso de estudo</h3>
+        <h3>1.3 Perguntas de Partida e Objetivos de Investigação</h3>
+        <h3>1.4 Metodologia de Investigação</h3>
+        <h4>1.4.1 Etapas de </h4>
+        <h4>1.4.2 Instrumentos de análise e fintes de informação</h4>
+        <h2>2. Ordenamento do Território em Portugal: Instrtumentos e Atores</h2>
+        <h3>ATORES</h3><hr>
+
+         <h1>Principais formatações</h1>
+         <h2>Negrito/destaque</h2>
+         <p>Nesta frase temo um <b>termo em negrito</b> usando a tag &lt;b&gt (NÃO SEMÂNTICA); </p>
+         <p>Nesta frase, tenho um <strong>termo em negrito</strong> usando a tag &lt;strong&gt; (SEMÂNTICA)</p>
+         <h2>Itálico/Ênfase</h2>
+         <p>Nesta frase temos um termo <i>em itálico</i> usando a tag &lt;i&gt; (NÃO SEMÂNTICA)</p>
+         <p>Nesta frase temos um <em>termo em itálico</em> usando a tag &lt;em&gt; (SEMÂNTICA)</p>
+
+
 </body>
 </html>
