--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
          <h2>Itálico/Ênfase</h2>
          <p>Nesta frase temos um termo <i>em itálico</i> usando a tag &lt;i&gt; (NÃO SEMÂNTICA)</p>
          <p>Nesta frase temos um <em>termo em itálico</em> usando a tag &lt;em&gt; (SEMÂNTICA)</p>
+         <p>teste da branch</p>
 
 
 </body>
