--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
          <h2>Itálico/Ênfase</h2>
          <p>Nesta frase temos um termo <i>em itálico</i> usando a tag &lt;i&gt; (NÃO SEMÂNTICA)</p>
          <p>Nesta frase temos um <em>termo em itálico</em> usando a tag &lt;em&gt; (SEMÂNTICA)</p>
-         <p>teste da branch</p>
+         <h2>Outras formatações adicionais</h2>
+         <p>Nesta frase temos um termo <mark>marcado</mark> usando a tag &ltmark&gt </p>
+         <p><del>Esse aqui é um texto excluído</del> usando a tag &ltdel&gt</p>
 
 
 </body>
